# Aureliette

./: .gitignore  CMakeLists.txt
assets/shaders/: frag_camera.glsl  frag_textures.glsl  vert.glsl  vert_camera.glsl  vert_rgb.glsl  vert_textures.glsl  vert_transform.glsl
shaders/: frag.glsl  frag_camera.glsl  frag_textures.glsl  vert_camera.glsl  vert_textures.glsl  vert_transform.glsl
src/: main.cpp
src/Engine/: Application.cpp  Application.h  Utils.cpp  Utils.h  Vertex.h
src/Engine/core/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.hpp  Globals.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  ObjectLoader.cpp  ObjectLoader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/Engine/geometry/: Cube.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pyramid.h  Triangle.h  Vertex.h
src/Engine/ui/: Imgui_utils.cpp  Imgui_utils.h
src/Engine/window/: Window.cpp  Window.h
src/impl/: iBuffer.h
src/impl/Ogl/: GLBuffer.cpp  GLBuffer.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexArrayBuffer.cpp  GLVertexArrayBuffer.h  GlShader.cpp
src/math/: kMath.h
src/programs/: DoubleTriangle.cpp  Model Loading.cpp  RectShaderInput.cpp  Rectangle.cpp  TriangleShader.cpp  cubesrotating.cpp
